--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.24",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.34.0",
